--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,7 @@ wheels/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# Unit misc / coverage reports
 htmlcov/
 .tox/
 .coverage
